crates/thrindex-compiler/tests/snapshots/error_snapshots__e0107_invalid_reset_mode.snap
---
source: crates/thrindex-compiler/tests/error_snapshots.rs
expression: err.to_string()
---
E0107: invalid LIF reset mode "hard" in layer 0
Why: reset must be "subtract" or "zero" (Playbook §28 canonical vocab).
Fix: change reset to "subtract" or "zero" when constructing the LIF layer.
Docs: https://docs.thrindex.com/errors/E0107
