crates/thrindex-compiler/tests/snapshots/error_snapshots__unknown_target.snap
---
source: crates/thrindex-compiler/tests/error_snapshots.rs
expression: err.to_string()
---
E0108: Graph IR JSON parse error: unknown target "loihi"; supported: "sim"
Why: the input is not valid Graph IR JSON (produced by thx.compile's Python extraction pass).
Fix: verify the Graph IR was produced by a current version of the thrindex Python SDK.
Docs: https://docs.thrindex.com/errors/E0108
